--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="center" id="passwordArea">
   <h2>パスワードが必要です</h2>
   <p>質問：実家の喫茶店の名前は？（カタカナ or 英語で）</p>
-  <input type="password" id="passwordInput" placeholder="例：ログカフェイッツ または logcafeits" />
+  <input type="password" id="passwordInput" placeholder="例：店の名前を入力" />
   <button onclick="checkPassword()">送信</button>
   <p id="error" style="color:red;"></p>
 </div>
