--- a/index.html
+++ b/index.html
@@ -1,64 +1,100 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8" />
-<title>限定公開動画 - 十代</title>
-<style>
-  body { font-family: sans-serif; padding: 2em; background: #f4f4f4; }
-  .hidden { display: none; }
-  .center { text-align: center; }
-  iframe {
-    width: 100vw;
-    height: 90vh;
-    border: none;
-    margin-bottom: 1em;
-  }
-  .folder {
-    margin-bottom: 3em;
-  }
-  h3 {
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 0.3em;
-  }
-</style>
+  <meta charset="UTF-8">
+  <title>限定公開動画 - 十代</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      padding: 2em;
+      background: #f9f9f9;
+      margin: 0;
+    }
+    .hidden {
+      display: none;
+    }
+    .center {
+      text-align: center;
+      margin-top: 100px;
+    }
+    iframe {
+      width: 100vw;
+      height: 90vh;
+      border: none;
+      margin-bottom: 2em;
+    }
+    .folder {
+      margin-bottom: 4em;
+      padding: 1em;
+      background: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    h2, h3 {
+      color: #333;
+    }
+    input[type="password"] {
+      padding: 0.5em;
+      font-size: 1em;
+      width: 60%;
+      max-width: 300px;
+    }
+    button {
+      padding: 0.5em 1em;
+      font-size: 1em;
+      margin-top: 10px;
+    }
+    #error {
+      color: red;
+      margin-top: 1em;
+    }
+  </style>
 </head>
 <body>
 
-<div class="center" id="passwordArea">
-  <h2>パスワードが必要です</h2>
-  <p>質問：実家の喫茶店の名前は？（カタカナ or 英語で）</p>
-  <input type="password" id="passwordInput" placeholder="店の名前を入力" />
-  <button onclick="checkPassword()">送信</button>
-  <p id="error" style="color:red;"></p>
-</div>
-
-<div id="videos" class="hidden">
-  <h2 class="center">限定公開動画 - 十代</h2>
-
-  <div class="folder">
-    <h3>中３文化祭</h3>
-    <p>動画はありません。</p>
+  <div class="center" id="passwordArea">
+    <h2>パスワードが必要です</h2>
+    <p>質問：実家の喫茶店の名前は？（カタカナ or 英語で）</p>
+    <input type="password" id="passwordInput" placeholder="例：ログカフェイッツ / logcafeits / logcafeit's">
+    <br>
+    <button onclick="checkPassword()">送信</button>
+    <p id="error"></p>
   </div>
 
-  <div class="folder">
-    <h3>高３文化祭</h3>
-    <iframe src="https://drive.google.com/file/d/1DesaHdIZ1sNMEZ7eoDh3YfOs4CKEJk59/preview" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
-    <iframe src="https://drive.google.com/file/d/1nXz_in_NBceg-GlR1aK_Ljp4rzZjYl7t/preview" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
-    <iframe src="https://drive.google.com/file/d/1095JKet93iub5u0izIh3JEf_4tjNsZoO/preview" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
-  </div>
-</div>
+  <div id="videos" class="hidden">
+    <h2 class="center">限定公開動画 - 十代</h2>
 
-<script>
-function checkPassword() {
-  const input = document.getElementById('passwordInput').value.trim();
-  if (input === "ログカフェイッツ" || input.toLowerCase() === "logcafeits") {
-    document.getElementById('passwordArea').classList.add('hidden');
-    document.getElementById('videos').classList.remove('hidden');
-  } else {
-    document.getElementById('error').textContent = "パスワードが間違っています";
-  }
-}
-</script>
+    <div class="folder">
+      <h3>中３文化祭</h3>
+      <p>（現在動画はありません）</p>
+    </div>
+
+    <div class="folder">
+      <h3>高３文化祭</h3>
+      <iframe src="https://drive.google.com/file/d/1DesaHdIZ1sNMEZ7eoDh3YfOs4CKEJk59/preview" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+      <iframe src="https://drive.google.com/file/d/1nXz_in_NBceg-GlR1aK_Ljp4rzZjYl7t/preview" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+      <iframe src="https://drive.google.com/file/d/1095JKet93iub5u0izIh3JEf_4tjNsZoO/preview" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe>
+    </div>
+  </div>
+
+  <script>
+    function checkPassword() {
+      const input = document.getElementById('passwordInput').value.trim();
+      const lowerInput = input.toLowerCase();
+
+      const validPasswords = [
+        "logcafeits",
+        "logcafeit's",
+        "ログカフェイッツ"
+      ];
+
+      if (validPasswords.includes(lowerInput) || input === "ログカフェイッツ") {
+        document.getElementById('passwordArea').classList.add('hidden');
+        document.getElementById('videos').classList.remove('hidden');
+      } else {
+        document.getElementById('error').textContent = "パスワードが間違っています";
+      }
+    }
+  </script>
 
 </body>
 </html>
