--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="center" id="passwordArea">
     <h2>パスワードが必要です</h2>
     <p>質問：実家の喫茶店の名前は？（カタカナ or 英語で）</p>
-    <input type="password" id="passwordInput" placeholder="例：ログカフェイッツ / logcafeits / logcafeit's">
+    <input type="password" id="passwordInput" placeholder="ここに店名を入力">
     <br>
     <button onclick="checkPassword()">送信</button>
     <p id="error"></p>
