--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>限定公開動画 - 十代</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>限定公開動画</title>
   <style>
     body {
       font-family: sans-serif;
       padding: 2em;
-      background: #f9f9f9;
+      background: #f5f5f5;
       margin: 0;
     }
     .hidden {
@@ -18,21 +17,26 @@
       text-align: center;
       margin-top: 100px;
     }
-    iframe {
-      width: 100%;
-      height: 56.25vw; /* 16:9 比率 */
-      max-height: 90vh;
-      border: none;
-      margin-bottom: 2em;
-    }
-    .folder {
-      margin-bottom: 4em;
-      padding: 1em;
-      background: #fff;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    .section {
+      margin-bottom: 3em;
     }
     h2, h3 {
       color: #333;
+    }
+    .video-block {
+      background: #fff;
+      padding: 1em;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      margin-bottom: 2em;
+    }
+    .video-block img {
+      width: 100%;
+      aspect-ratio: 16/9;
+      object-fit: cover;
+      max-width: 800px;
+      cursor: pointer;
+      display: block;
+      margin: auto;
     }
     input[type="password"] {
       padding: 0.5em;
@@ -53,6 +57,7 @@
 </head>
 <body>
 
+  <!-- パスワード入力画面 -->
   <div class="center" id="passwordArea">
     <h2>パスワードが必要です</h2>
     <p>質問：実家の喫茶店の名前は？（英語で）</p>
@@ -62,27 +67,48 @@
     <p id="error"></p>
   </div>
 
+  <!-- 動画セクション -->
   <div id="videos" class="hidden">
-    <h2 class="center">限定公開動画 - 十代</h2>
+    <h2>中３文化祭</h2>
 
-    <div class="folder">
-      <h3>中３文化祭</h3>
-      <p>（現在動画はありません）</p>
+    <div class="video-block">
+      <h3>三代目オタザイル（オタ芸）</h3>
+      <a href="https://photos.app.goo.gl/NUbpmT6bMtefAJ6v9" target="_blank">
+        <img src="https://photos.app.goo.gl/E2oBU3GJ1T4wrYvB9" alt="三代目オタザイル（オタ芸）">
+      </a>
     </div>
 
-    <div class="folder">
-      <h3>高３文化祭</h3>
-      <iframe src="https://drive.google.com/file/d/1DesaHdIZ1sNMEZ7eoDh3YfOs4CKEJk59/preview" allow="fullscreen" allowfullscreen></iframe>
-      <iframe src="https://drive.google.com/file/d/1nXz_in_NBceg-GlR1aK_Ljp4rzZjYl7t/preview" allow="fullscreen" allowfullscreen></iframe>
-      <iframe src="https://drive.google.com/file/d/1095JKet93iub5u0izIh3JEf_4tjNsZoO/preview" allow="fullscreen" allowfullscreen></iframe>
+    <h2>高３文化祭</h2>
+
+    <div class="video-block">
+      <h3>日清CM 大坂半端ないって篇 パロディ</h3>
+      <a href="https://photos.app.goo.gl/265JvHxsdiVophn6A" target="_blank">
+        <img src="https://photos.app.goo.gl/VtaCxAaL2adE2HZEA" alt="日清CM 大坂半端ないって篇 パロディ">
+      </a>
+    </div>
+
+    <div class="video-block">
+      <h3>Mステ パロディ</h3>
+      <a href="https://photos.app.goo.gl/7mgE1sofRPtGqMUY8" target="_blank">
+        <img src="https://photos.app.goo.gl/HTcKJEtvMFK6a89t5" alt="Mステ パロディ">
+      </a>
+    </div>
+
+    <div class="video-block">
+      <h3>「ビリギャル」エンディング パロディ</h3>
+      <a href="https://photos.app.goo.gl/bHXaJWU9Rik33Du66" target="_blank">
+        <img src="https://photos.app.goo.gl/1AncLfJG4LzWU1aS8" alt="ビリギャル エンディング パロディ">
+      </a>
     </div>
   </div>
 
+  <!-- パスワードチェック -->
   <script>
     function checkPassword() {
       const input = document.getElementById('passwordInput').value.trim().toLowerCase();
-
       const validPasswords = [
+        "it's",
+        "its",
         "logcafeits",
         "logcafeit's"
       ];
