--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     <h2 class="center">限定公開動画 - 十代</h2>
 
     <div class="folder">
-      <h3>中３文化祭</h3>
+      <h3>中三文化祭</h3>
       <p><strong>三代目オタザイル（オタ芸）</strong></p>
       <iframe src="https://www.youtube.com/embed/sdxxxSPLwaQ" allowfullscreen></iframe>
     </div>
 
     <div class="folder">
-      <h3>高１文化祭</h3>
+      <h3>高一文化祭</h3>
       <p><strong>シーブリーズ CM 「すずと大志篇」 パロディ</strong></p>
       <iframe src="https://www.youtube.com/embed/EbIL5xA7eMQ" allowfullscreen></iframe>
 
@@ -97,13 +97,13 @@
     </div>
 
     <div class="folder">
-      <h3>高２春</h3>
+      <h3>高二春</h3>
       <p><strong>グリーンボーイズ『声』Short Ver パロディ</strong></p>
       <iframe src="https://www.youtube.com/embed/_pLZtE0pXh0" allowfullscreen></iframe>
     </div>
 
     <div class="folder">
-      <h3>高３文化祭</h3>
+      <h3>高三文化祭</h3>
 
       <p><strong>日清CM 「大坂半端ないって篇」 パロディ</strong></p>
       <iframe src="https://www.youtube.com/embed/Aq0ZtjCBHm8" allowfullscreen></iframe>
